--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "es6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/liuyepiaoxiang/es6-learning.git"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1"
   },
   "author": "liujia",
   "license": "MIT",
